--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="secao3">
         <div class="cartao-ultra">
             <h2><a href="#">Nubank Ultra Violeta</a></h2>
-            <h3>O cartão pensado para quem <br>quer ver além</h3>
+            <h3>O cartão pensado para quem <br>quer ver além</h3> <br>
             <a href="#" class="link3">Saiba mais</a>
         </div>
 
@@ -78,5 +78,21 @@
     </section>
 
     <!-- Fim da Seção 3 -->
+
+    <!-- Inicio da Seção 4 -->
+
+        <section class="secao4">
+            <div class="nu-cartao">
+                <h2>Conta do Nubank</h2>
+                <h3>A conta que vai levar você <br>ao controle da sua vida <br>financeira.</h3> <br>
+                <a href="#" class="link4">Sem tarifas e sem complicações.</a>
+            </div>
+
+            <div class="cartao-4">
+                <img src="img/img4.png" alt="img4">
+            </div>
+        </section>
+
+    <!-- Fim da Seção 4 -->
 </body>
 </html>
