finalizado sem responsividade

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+    <script src="https://kit.fontawesome.com/157902c91e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="menu">
@@ -18,15 +22,15 @@
         <nav class="menu-nubank">
             <ul>
                 <li><a href="#">Página Inicial</a></li>
-                <li><a href="#">Para Você</a></li>
-                <li><a href="#">Para Seu Negócio</a></li>
-                <li><a href="#">O Nubank</a></li>
+                <li><a href="#">Para Você<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                <li><a href="#">Para Seu Negócio<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                <li><a href="#">O Nubank<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
                 <li><a href="#">Perguntas</a></li>
             </ul>
         </nav>
 
         <ul class="login">
-            <li><a href="#">Login</a></li>
+            <li><a href="#">Login<span class="material-symbols-outlined">logout</span></a></li>
         </ul>
     </header>
 
@@ -54,7 +58,7 @@
         <div class="cartao">
             <h2><a href="#">Cartão de Crédito</a></h2>
             <h3>Pode ele chamar ele de <br>roxinho. Além disso, pode <br>chamar ele de moderno, <br>gratuito, e prático também.</h3> <br>
-            <a href="#" class="link2">Saiba mais</a>
+            <a href="#" class="link2">Saiba mais<span class="material-symbols-outlined">arrow_forward</span></a>
         </div>
 
         <div class="img-cartao"></div>
@@ -69,7 +73,7 @@
         <div class="cartao-ultra">
             <h2><a href="#">Nubank Ultra Violeta</a></h2>
             <h3>O cartão pensado para quem <br>quer ver além</h3> <br>
-            <a href="#" class="link3">Saiba mais</a>
+            <a href="#" class="link3">Saiba mais<span class="material-symbols-outlined">arrow_forward</span></a>
         </div>
 
         <div class="cartao-3">
@@ -85,7 +89,7 @@
             <div class="nu-cartao">
                 <h2>Conta do Nubank</h2>
                 <h3>A conta que vai levar você <br>ao controle da sua vida <br>financeira.</h3> <br>
-                <a href="#" class="link4">Sem tarifas e sem complicações.</a>
+                <a href="#" class="link4">Sem tarifas e sem complicações.<span class="material-symbols-outlined">arrow_forward</span></a>
             </div>
 
             <div class="cartao-4">
@@ -94,5 +98,155 @@
         </section>
 
     <!-- Fim da Seção 4 -->
+
+    <!-- Inicio da Seção 5, 6 e 7 -->
+        
+        <section class="secao5">
+            <h2>Nós acreditamos que só <br>uma pessoa pode ter <br>controle sobre sua vida <br>financeira: você.</h2> <br>
+            <a href="#" class="link5">Saiba mais sobre como fazemos isso<span class="material-symbols-outlined">arrow_forward</span></a>
+        </section>
+
+        <section class="secao6">
+            <h2>NuCommunity <br> A comunidade oficial do <br>Nubank para você tirar <br>dúvidas e compartilhar <br>ideias.</h2> <br>
+            <a href="#" class="link6">Faça parte<span class="material-symbols-outlined">north_east</span></a>
+        </section>
+
+        <section class="secao7">
+            <h2>Muita informação e <br>conteúdo para você <br>encontrar a melhor <br>versão da sua vida <br>financeira.</h2> <br>
+            <a href="#" class="link7">Fala, Nubank<span class="material-symbols-outlined">north_east</span></a>
+        </section>
+
+    <!-- Fim da Seção 5, 6 e 7 -->
+
+    <!-- Inicio do Rodapé 1 -->
+
+    <div class="rodape1">
+        <div class="sec-1">
+            <h2>Nubank</h2>
+            <ul>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#">Carreiras</a></li>
+                <li><a href="#">Perguntas frequentes</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Imprensa</a></li>
+                <li><a href="#">Nu Impacto<span class="material-symbols-outlined">north_east</span></a></li>
+            </ul>
+        </div>
+        <div class="sec-2">
+            <h2>Produtos</h2>
+            <ul>
+                <li><a href="#">Conta digital</a></li>
+                <li><a href="#">Cartão de crédito</a></li>
+                <li><a href="#">Nubank Ultravioleta</a></li>
+                <li><a href="#">Empréstimo</a></li>
+                <li><a href="#">Conta PJ</a></li>
+                <li><a href="#">Cartão de crédito PJ</a></li>
+                <li><a href="#">Nubank Vida</a></li>
+                <li><a href="#">Investimentos</a></li>
+            </ul>
+        </div>
+        <div class="sec-3">
+            <h2>Explore</h2>
+            <ul>
+                <li><a href="#">Comunidade<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">Blog<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">InvestNews<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">Newslatter<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">México<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">Argentina<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">Colômbia<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+            </ul>
+        </div>
+        <div class="sec-4">
+            <h2>Veja Também</h2>
+            <ul>
+                <li><a href="#">Auxílio Emergencial e FGTS<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+                <li><a href="#">Tudo sobre o Pix<span class="material-symbols-outlined">
+                    north_east
+                    </span></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Fim do Rodapé 1 -->
+
+    <!-- Inicio do Rodapé 2 -->
+
+    <div class="rodape2">
+        <div class="sec-1">
+            <h2>Transparência</h2>
+            <ul>
+                <li><a href="#">Política de Privacidade</a></li>
+                <li><a href="#">Política de Compliance</a></li>
+                <li><a href="#">Contratos</a></li>
+                <li><a href="#">Política de Segurança</a></li>
+                <li><a href="#">Relatório Financeiros</a></li>
+                <li><a href="#">Ética e Compliance</a></li>
+                <li><a href="#">Dados Abertos</a></li>
+                <li><a href="#">SCR</a></li>
+                <li><a href="#">Convenção de Boletos</a></li>
+            </ul>
+        </div>
+        <div class="sec-2">
+            <h2>Ouvidoria</h2>
+            <ul>
+                <li><a href="#">0800 867 0463</a></li>
+                <li><a href="#">ouvidoria@nubank.com.br</a></li>
+                <li><a href="#">Atendimento das 9h às 18h (dias úteis)</a></li>
+            </ul>
+        </div>
+        <div class="sec-3">
+            <h2>Fale com a gente</h2>
+            <ul>
+                <li><a href="#">0800 608 6236</a></li>
+                <li><a href="#">meajuda@nubank.com.br</a></li>
+                <li><a href="#">Atendimento 24h</a></li>
+            </ul>
+        </div>
+        <div class="sec-4">
+            <h2>Baixe o app</h2>
+            <ul>
+                <li><img src="img/applestore.png" alt="apple"></li>
+                <li><img src="img/playstore.png" alt="play"></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Fim do Rodapé 2-->
+
+    <!-- Inicio do Rodapé 3 -->
+
+    <footer>
+        <div class="rodape3">
+            <img class="imgrodape" src="img/logonurodape.png" alt="imgrodape">
+            <p>© 2021 Nu Pagamentos S.A - Instituição de Pagamentos. 18.236.120/0001-58 <br>Rua Capote Valente, 39 - São Paulo, SP - 05409-000</p>
+
+            <ul class="redes">
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Inicio do Rodapé 3 -->
 </body>
 </html>
