creat a responsive for smartphone

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nubank - Finalmente você no controle do seu dinheiro</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Nanum+Gothic&display=swap" rel="stylesheet">
@@ -29,6 +30,12 @@
             </ul>
         </nav>
 
+        <div class="menu-mobile">
+            <a href="#">
+                <span class="material-symbols-outlined">menu</span>
+            </a>
+        </div>
+
         <ul class="login">
             <li><a href="#">Login<span class="material-symbols-outlined">logout</span></a></li>
         </ul>
@@ -38,7 +45,7 @@
 
     <section class="imagem">
         <h1>O futuro é a razão que a gente faz <br>planos.</h1>
-        <h2>Escolho o futuro. Comece a controlar melhor sua vida financeira <br>com o Nubank.</h2>
+        <h2>Escolha o futuro. Comece a controlar melhor sua vida financeira <br>com o Nubank.</h2>
 
         <div class="form">
             <h3>Peça sua conta e cartão <br>de crédito do Nubank.</h3>
@@ -57,12 +64,13 @@
     <section class="secao2">
         <div class="cartao">
             <h2><a href="#">Cartão de Crédito</a></h2>
-            <h3>Pode ele chamar ele de <br>roxinho. Além disso, pode <br>chamar ele de moderno, <br>gratuito, e prático também.</h3> <br>
+            <h3>Pode chamar ele de <br>roxinho. Além disso, pode <br>chamar ele de moderno, <br>gratuito, e prático também.</h3> <br>
             <a href="#" class="link2">Saiba mais<span class="material-symbols-outlined">arrow_forward</span></a>
         </div>
 
-        <div class="img-cartao"></div>
+        <div class="img-cartao">
         <img src="img/img2.png" alt="img2">
+        </div>
     </section>
 
     <!-- Fim da Seção 2 -->
